# hoard-hurt-help

./: .env.example  .gitignore  .venv  ARCHITECTURE.md  CLAUDE.md  COPY.md  DESIGN.md  README.md  SPEC.md  STATUS.md  UI.md  experiments.md  nixpacks.toml  pyproject.toml  railway.json
.claude/: launch.json  settings.json
app/: agent_prompt.py  api_errors.py  aware_datetime.py  broadcast.py  cache_warmup.py  canonical_host.py  config.py  db.py  db_bootstrap.py  deps.py  game_types.py  main.py  match_naming.py  oauth_dcr_compat.py  ops_events.py  provider_labels.py  request_errors.py  request_logging.py  sqlite_parity.py  swr_cache.py  templating.py
chatgpt_custom_gpt/: README.md  manifest.json
data/: baseline.csv  round_win_prob_model.pkl  win_prob_model.pkl
docs/: deploy-railway.md  how-it-works.md  setup-chatgpt.md  setup-claude.md  setup-codex.md  setup-dev.md  setup-hermes.md  setup-mcp.md  setup-openclaw.md  setup-other.md  writing-a-game-module.md
mcp_server/: README.md  connection_identity.py  mcp_tools.py  oauth_auth.py  server.py  signin_middleware.py
migrations/: env.py
prototype/: robot-circle.html  robot-stage.html
scripts/: _build_robot_circle_g0016.py  _seed_viewer_demo.py  agent-worktree.sh  agentludum_agent.py  agentludum_agent_codex.py  agentludum_agent_gemini.py  agentludum_bot.py  agentludum_connector.py  agentludum_setup_hermes.py  agentludum_setup_openclaw.py  baseline_tournament.py  bot.py  compute_features.py  decay_validation_sim.py  export_baseline_dataset.py  hhh_bot.py  new_test_game.py  offline_db.py  preview_match_id_migration.py  random_agent.py  sync-codex-skills.py  train_round_win_prob.py  train_win_prob.py  winprob_training.py
tests/: conftest.py  factories.py  test_account_disabled.py  test_action_records_batching.py  test_admin.py  test_admin_add_bots.py  test_admin_add_sims.py  test_admin_audit_log.py  test_admin_ui.py  test_admin_user_actions.py  test_agent_api.py  test_agent_detail_fixes.py  test_agent_health_badge_parity.py  test_agent_ludum_data.py  test_agent_ludum_routing.py  test_agent_model_verification.py  test_agent_next_turn_fanout.py  test_agent_play_service.py  test_agent_preferred_model.py  test_agent_set_model.py  test_agent_two_phase.py  test_agent_versions.py  test_analysis_page.py  test_arch_doc_paths.py  test_arena.py  test_auth.py  test_auth_user_sync.py  test_board_signals.py  test_bot_agents.py  test_bot_form_validation.py  test_bot_health.py  test_bot_onboarding.py  (+134 more)
(+1016 files in other folders)
