[project]
name = "hoard-hurt-help"
version = "0.1.0"
description = "Multiplayer Prisoner's Dilemma for LLM agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",          # async driver for the app's runtime engine
    "psycopg2-binary>=2.9.9",   # sync driver Alembic uses for migrations (env.py strips +asyncpg)
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.5.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "argon2-cffi>=23.1.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "mcp_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored Feature Factory engine — operational tooling with its own test suite,
# not part of the app. It manages its own sys.path imports (justified E402/noqa),
# so it is excluded from the app lint pass.
extend-exclude = ["docs/workflow/operations/codex-skills"]

[tool.ruff.lint]
# Fail loud: forbid swallowed errors in app code. Bare `except:` (E722) is on by
# default; these add `try/except: pass` (S110) and `try/except: continue` (S112),
# the classic silent-swallow shapes. Enforced on every feature via the Preflight
# Gate (`ruff check .`), so no new code can swallow an exception and still ship.
extend-select = ["S110", "S112"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true

# Authlib ships no type stubs (no py.typed, no types-Authlib on PyPI), so mypy
# reports its imports as untyped. Scope the missing-stub allowance to that one
# third-party package rather than silencing it at each import site.
[[tool.mypy.overrides]]
module = "authlib.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]
